--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Convert_JPG_to_PNG</string>
+    <string name="convert_button">Convert</string>
+    <string name="select_image_button">Select image</string>
+    <string name="image_to_convert">Image to convert</string>
 </resources>
