add check permission and request permission

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">Convert_JPG_to_PNG</string>
     <string name="convert_button">Convert</string>
     <string name="select_image_button">Select image</string>
-    <string name="image_to_convert">Image to convert</string>
+    <string name="pick_image_to_convert">Pick image to convert</string>
+    <string name="permission_required">Permission required</string>
+    <string name="request_permisson_message">Permissions must be provided to continue</string>
 </resources>
