--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="pick_image_to_convert">Pick image to convert</string>
     <string name="permission_required">Permission required</string>
     <string name="request_permisson_message">Permissions must be provided to continue</string>
+    <string name="positive_button">Ok</string>
 </resources>
